Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,9 @@
 	inheritFrom = All-Projects
 [submit]
 	action = inherit
+[access "refs/heads/*"]
+	forgeAuthor = group Administrators
+	forgeCommitter = group Administrators
+	forgeServerAsCommitter = group Administrators
+	push = +force group Administrators
+	pushMerge = group Administrators
